[package]
name = "idea-card"
version = "0.2.2"
description = "A lightweight tray-first inspiration card notebook."
authors = ["IdeaCard"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "idea_card_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
